--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "suprim-portfolio",
+  "homepage": "https://suprimbhattarai.com.np",
+  "description": "Suprim Bhattarai's personal portfolio website built with React and Tailwind CSS.",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,6 +10,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "predeploy": "vite build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
