--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "suprim-portfolio",
-  "homepage": "https://suprimbhattarai.com.np/Suprim-Portfolio",
+  "homepage": "https://suprimbhattarai.com.np",
   "description": "Suprim Bhattarai's personal portfolio website built with React and Tailwind CSS.",
   "private": true,
   "version": "0.0.0",
